--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -27,12 +27,34 @@
                                 </span>
                             </p>
                             <div class="rating mt-auto">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star-half-alt"></i>
-                                <span class="ms-1 text-muted">(4.5)</span>
+                                <% if (list.numReviews > 0) { %>
+                                    <% let fullStars = Math.floor(list.averageRating); %>
+                                    <% for(let i = 0; i < fullStars; i++) { %>
+                                        <i class="fas fa-star"></i>
+                                    <% } %>
+                                    <% if (list.averageRating - fullStars >= 0.5) { %>
+                                        <i class="fas fa-star-half-alt"></i>
+                                        <% fullStars++; %>
+                                    <% } %>
+                                    <% for(let i = fullStars; i < 5; i++) { %>
+                                        <i class="far fa-star"></i>
+                                    <% } %>
+                                    <span class="ms-1 text-muted">(<%= list.averageRating %>)</span>
+                                <% } else { %>
+                                    <% let randomDisplayRating = (Math.random() * (5 - 3.5) + 3.5).toFixed(1); %>
+                                    <% let fullStars = Math.floor(randomDisplayRating); %>
+                                    <% for(let i = 0; i < fullStars; i++) { %>
+                                        <i class="fas fa-star"></i>
+                                    <% } %>
+                                    <% if (randomDisplayRating - fullStars >= 0.5) { %>
+                                        <i class="fas fa-star-half-alt"></i>
+                                        <% fullStars++; %>
+                                    <% } %>
+                                    <% for(let i = fullStars; i < 5; i++) { %>
+                                        <i class="far fa-star"></i>
+                                    <% } %>
+                                    <span class="ms-1 text-muted">(<%= randomDisplayRating %>)</span>
+                                <% } %>
                             </div>
                         </div>
                     </div>
