--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -38,6 +38,10 @@
             <h2>About this place</h2>
             <p><%= listing.description %></p>
         </div>
+        <div class="show-description">
+            <h2>Owner Name </h2>
+            <p><span><%= listing.owner.username[0].toUpperCase() %></span><%= listing.owner.username.slice(1)%></p>
+        </div>
 
         <div class="map-container">
             <h2>Location on Map</h2>
@@ -52,6 +56,7 @@
             <h2 style="text-align: center;">Reviews</h2>
             
             <!-- Review Form -->
+             <%if(currentUser){%>
             <div class="review-form-container">
                 <h3>Write a Review</h3>
                 <form action="/listings/<%= listing._id %>/reviews" method="POST" class="review-form needs-validation" novalidate>
@@ -81,6 +86,7 @@
                     </button>
                 </form>
             </div>
+            <%}%>
 
             <!-- Reviews Display -->
             <div class="reviews-display">
@@ -105,9 +111,12 @@
                             </div>
                             <div class="review-author">
                                 <i class="fas fa-user me-2"></i>
-                                <%= review.author %>
+                                <%if(review.author){%>
+                                <%= review.author.username%>
+                                <%}%>
+
                             </div>
-                            <% if(typeof currentUser !== 'undefined' && currentUser) { %>
+                            <% if(currentUser._id.equals(review.author._id)) { %>
                             <form action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST" class="d-inline">
                                 <button type="submit" class="btn btn-sm btn-danger mt-2">
                                     <i class="fas fa-trash-alt me-1"></i>Delete
@@ -124,7 +133,7 @@
                 <% } %>
             </div>
         </div>
-        <% if(typeof currentUser !== 'undefined' && currentUser) { %>
+        <% if(currentUser && currentUser._id.equals(listing.owner._id) ){ %>
         <div class="show-actions" >
             <a href="/listings/<%= listing._id %>/edit" class="btn-edit">
                 <i class="fas fa-edit me-2"></i>Edit
