--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -8,8 +8,8 @@
         </div>
     </div>
 
-    <div class="show-image-container">
-        <img src="<%= listing.image %>" alt="<%= listing.title %>" class="show-image">
+    <div class="show-image-container" style="transform: scale(0.8);">
+        <img src="<%= listing.image %>" alt="<%= listing.title %>" class="show-image" >
         <div class="show-price">
             &#8377;<%= listing.price.toLocaleString("en-IN") %> / night
         </div>
