--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -116,7 +116,7 @@
                                 <%}%>
 
                             </div>
-                            <% if(currentUser._id.equals(review.author._id)) { %>
+                            <% if (currentUser && review.author && (String(currentUser._id) === String(review.author._id))) { %>
                             <form action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST" class="d-inline">
                                 <button type="submit" class="btn btn-sm btn-danger mt-2">
                                     <i class="fas fa-trash-alt me-1"></i>Delete
