--- a/views/users/account.ejs
+++ b/views/users/account.ejs
@@ -156,6 +156,23 @@ h3.mb-1 {
         font-size: 1.2rem;
     }
 }
+
+@media (max-width: 480px) {
+  .container {
+    max-width: 100% !important;
+    padding: 0 0.2rem !important;
+  }
+  .card, .card-body {
+    padding: 0.7rem 0.3rem !important;
+  }
+  h1, h2, h3 {
+    font-size: 1.1rem !important;
+  }
+  .btn, .btn-lg {
+    font-size: 1rem !important;
+    padding: 0.7rem 0.5rem !important;
+  }
+}
 </style>
 
 <%- include('../partials/footer') %> 
